# GELLO_for_Anything_Low_Cost

./: .gitignore  README.md  howtoplay.md  requirements.txt  xarm6_robot.urdf
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.fish  setup.sh
devel/lib/pkgconfig/: xarm_sys.pc
devel/share/xarm_sys/cmake/: xarm_sysConfig.cmake
scripts/: episode_recorder.py  run_all_nodes.sh  test_cam.py  test_teleop.sh
scripts/Follower_Arm/ARX/: api.py  arx_teleop.py
scripts/Follower_Arm/Dobot/: servo2Dobot.py
scripts/Follower_Arm/xarm/: servo2xarm.py  xarm_pub.py
scripts/Follower_Arm/xarm/xArm-Python-SDK/xarm/wrapper/: xarm_api.py
scripts/Uarm_teleop/: servo_zero.py
src/: CMakeLists.txt
src/UArm/: CMakeLists.txt  package.xml
src/UArm/scripts/: cam_pub.py  run_all_nodes.sh  test_teleop.sh
src/UArm/scripts/Follower_Arm/ARX/: arx5_interface.py  check_joint.py
src/UArm/scripts/Follower_Arm/Dobot/: run_Dobot.sh  test.py  test2.py
src/uarm/: CMakeLists.txt  package.xml
src/uarm/scripts/Follower_Arm/ARX/: arx_teleop.py  test_joint_control.py
src/uarm/scripts/Follower_Arm/Dobot/: run_Dobot.sh
src/uarm/scripts/Follower_Arm/xarm/xArm-Python-SDK/xarm/x3/: base.py
src/uarm/scripts/Uarm_teleop/: servo_reader.py  servo_reader_fixed.py
src/xarm_sys/launch/: xarm_inference.launch  xarm_joycon.launch  xarm_recorder.launch
src/xarm_sys/scripts/: cam_pub.py  episode_recorder.py  episode_recorder_pkl.py  model_interactor.py  play_episode.py  run_all_nodes.sh  xarm_controller.py  xarm_pub.py
src/xarm_sys/scripts/Gello/: servo2arm.py  servo_changeid.py  servo_reader.py  servo_reader_vis.py  servo_zero.py  xarm_control.py
src/xarm_sys/scripts/xarm_joycon/: .gitignore  MUJOCO_LOG.TXT  README.md  cam_pub.py  cam_sub_test.py  episode_recorder copy.py  episode_recorder.py  play_episode.py  pyproject.toml  run_all_nodes.sh  setup.py  test_camera.py  test_xarm.py  try.py
src/xarm_sys/scripts/xarm_joycon/examples/: gripper.xml  lerobot_genesis.py  lerobot_joycon_gpos.py  lerobot_joycon_gpos_real.py  lerobot_joycon_gpos_xarm6.py  lerobot_joycon_gpos_xarm6_new.py  lerobot_keycon_gpos.py  lerobot_keycon_gpos_real.py  lerobot_keycon_qpos.py  lutong_joycon.py  scene_xarm6.xml  shared.xml  test.py  test2.py  xarm6.xml
src/xarm_sys/scripts/xarm_joycon/joycon-robotics/: Makefile  README.md  joyconrobotics_tutorial.ipynb
src/xarm_sys/scripts/xarm_joycon/joycon-robotics/joyconrobotics/: constants.py  joycon.py  joyconrobotics.py
src/xarm_sys/scripts/xarm_joycon/joyconrobotics/: .gitignore  README.md  joyconrobotics_tutorial.ipynb  setup.py
src/xarm_sys/scripts/xarm_joycon/joyconrobotics/joyconrobotics/: constants.py  device.py  joycon.py  joyconrobotics.py
src/xarm_sys/scripts/xarm_joycon/lerobot_kinematics/: ET.py  IK.py  __init__.py  p_servo.py  params.py
src/xarm_sys/scripts/xarm_joycon/lerobot_kinematics/lerobot/: __init__.py  feetech.py  feetech_arm.py  lerobot_Kinematics.py
(+1 files in other folders)
